...
    <string name="sync_notification_progress">Syncing %1$d%%</string>
    <string name="sync_notification_complete">Library sync complete</string>
    <string name="sync_notification_failed">Library sync needs attention</string>
    <string name="sync_insufficient_storage_title">Not enough storage</string>
    <string name="sync_insufficient_storage_description">Not enough storage to sync. Needs %1$s; %2$s is currently available.</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="playback_notification_channel">Music playback</string>
    <string name="player_previous">Previous</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_next">Next</string>
    <string name="full_screen_player">Full screen player</string>
    <string name="player_seek">Playback position</string>
    <string name="player_volume">Music volume</string>
    <string name="player_heart">Favorite</string>
    <string name="player_more">More options</string>
    <string name="player_shuffle">Shuffle</string>
    <string name="player_shuffle_on">Shuffle on</string>
    <string name="player_repeat">Repeat</string>
    <string name="player_repeat_off">Repeat off</string>
    <string name="player_repeat_all">Repeat all</string>
    <string name="player_repeat_one">Repeat one</string>
    <string name="player_lyrics">Lyrics</string>
    <string name="player_lyrics_not_available">Lyrics are not available for this track.</string>
    <string name="player_cast">Cast</string>
    <string name="player_queue">Queue</string>
    <string name="player_queue_drag_handle">Reorder track</string>
    <string name="playlist_reorder">Reorder playlist</string>
    <string name="playlist_reorder_drag_handle">Drag to reorder track</string>
    <string name="playlist_reorder_done">Done reordering</string>
    <string name="player_queue_current">Currently playing</string>
    <string name="player_queue_unknown_track">Unavailable track</string>
...
    <string name="sort_play_count">Play count</string>
    <string name="sort_date_added">Date added</string>
    <string name="sort_order_asc">Ascending</string>
    <string name="sort_order_desc">Descending</string>
    <string name="track_row_more_options">Track options</string>
    <string name="track_context_menu_title">Track options</string>
    <string name="track_context_play_next">Play next</string>
    <string name="track_context_add_to_queue">Add to queue</string>
    <string name="track_context_start_mood_radio">Start Mood Radio</string>
    <string name="track_context_remove_from_queue">Remove from queue</string>
    <string name="track_context_track_info">Track info</string>
    <string name="track_context_find_lyrics">Find lyrics</string>
    <string name="track_context_find_lyrics_title">Find Lyrics</string>
    <string name="find_lyrics_track_title">Track title</string>
    <string name="find_lyrics_artist">Artist name</string>
    <string name="find_lyrics_duration">Duration</string>
    <string name="find_lyrics_search">Search</string>
    <string name="find_lyrics_searching">Searching…</string>
    <string name="find_lyrics_no_results">No lyrics found</string>
    <string name="find_lyrics_preview">Lyrics preview</string>
    <string name="find_lyrics_select">Select</string>
    <string name="track_context_add_to_favorites">Add to favorites</string>
    <string name="track_context_remove_from_favorites">Remove from favorites</string>
    <string name="track_context_add_to_playlist">Add to playlist</string>
    <string name="track_context_remove_from_playlist">Remove from playlist</string>
    <string name="track_context_go_to_album">Go to album</string>
    <string name="track_context_go_to_artist">Go to %1$s</string>
    <string name="track_context_go_to_artists">Go to artists</string>
    <string name="track_context_artist_picker_title">Artists</string>
    <string name="track_context_playlist_picker_title">Add to playlist</string>
    <string name="track_context_create_playlist">Create playlist</string>
    <string name="track_context_no_editable_playlists">Create a playlist to add this track.</string>
    <string name="track_context_track_info_title">Track info</string>
    <string name="track_info_details">DETAILS</string>
    <string name="track_info_quality_lossy">Lossy</string>
    <string name="track_info_quality_lossless">Lossless</string>
    <string name="track_info_quality_hi_res">Hi-Res</string>
    <string name="track_info_quality_dsd">DSD</string>
    <string name="track_info_artist">Artist</string>
    <string name="track_info_genre">Genre</string>
    <string name="track_info_year">Year</string>
    <string name="track_info_composer">Composer</string>
    <string name="track_info_disc">Disc</string>
    <string name="track_info_track">Track</string>
...
    <string name="track_info_label">Label</string>
    <string name="track_info_copyright">Copyright</string>
    <string name="track_info_isrc">ISRC</string>
    <string name="track_info_duration">Duration</string>
    <string name="track_info_format">Format</string>
    <string name="track_info_bitrate">Bitrate</string>
    <string name="track_info_sample_rate">Sample rate</string>
    <string name="track_info_bit_depth">Bit depth</string>
    <string name="track_info_codec">Codec</string>
    <string name="track_info_bpm">BPM</string>
    <string name="track_info_file_size">File size</string>
    <string name="tracks_count">%1$d tracks</string>
    <string name="tracks_empty_title">No tracks in library</string>
    <string name="tracks_empty_description">Synced tracks will appear here once mobile sync completes.</string>
    <string name="tracks_no_match_title">No matching tracks</string>
...
