package me.misa198.airmedy

fun sayHello(to: String): String =
    "Hello, $to!"